fix(styles): Improve spacing on /

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -203,3 +203,7 @@ main {
   font-size: $font-size-small;
   padding-top: 1rem;
 }
+
+.hidden {
+  display: none;
+}
